--- a/PAGES/08b_TS-definition/index.html
+++ b/PAGES/08b_TS-definition/index.html
@@ -2850,15 +2850,15 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>An Intuition</h2></p>
-<p><a href="/julia_book/PAGES/07e_TS-onFunctions/">In a previous section</a>, we described the process that unfolds when a function is called. To briefly review, let&#39;s consider a function <code>foo&#40;x&#41; &#61; x &#43; 2</code> and executing <code>foo&#40;a&#41;</code> for some variable <code>a</code>. We assume that <code>a</code> has a specific value assigned and therefore a concrete type, although we omit explicitly stating values for <code>a</code>. In this way, we highlight that the process depends on types, rather than values.</p>
-<p>Calling <code>foo&#40;a&#41;</code> prompts Julia to identify the concrete type of <code>a</code>, which we&#39;ll denote as <code>T</code>. If a compiled method instance for <code>foo</code> with an argument of type <code>T</code> already exists, then <code>foo&#40;a&#41;</code> is executed immediately. Otherwise, Julia compiles a method instance for evaluating <code>a &#43; 2</code>. This code generation leverages type inference, wherein the compiler attempts to deduce concrete types for all involved terms. The resulting machine code is then stored &#40;cached&#41;, making it readily available for subsequent calls of <code>foo&#40;b&#41;</code> when <code>b</code> has type <code>T</code>.</p>
+<p><a href="/julia_book/PAGES/07e_TS-onFunctions/">In a previous section</a>, we described the process that unfolds when a function is called. To briefly review, let&#39;s consider a function <code>foo&#40;x&#41; &#61; x &#43; 2</code> and executing <code>foo&#40;a&#41;</code> for some variable <code>a</code>. We assume that <code>a</code> has a specific value assigned and therefore a concrete type, although we omit explicitly stating a value for <code>a</code>. In this way, we highlight that the process depends on types, rather than values.</p>
+<p>Calling <code>foo&#40;a&#41;</code> prompts Julia to identify the concrete type of <code>a</code>, which we&#39;ll denote as <code>T</code>. If a compiled method instance for <code>foo</code> with an argument of type <code>T</code> already exists, then <code>foo&#40;a&#41;</code> is executed immediately. Otherwise, Julia compiles a method instance for evaluating <code>a &#43; 2</code>. This code generation leverages type inference, wherein the compiler attempts to deduce concrete types for terms in the function body. The resulting machine code is then stored, making it readily available for subsequent calls of <code>foo&#40;b&#41;</code> when <code>b</code> has type <code>T</code>.</p>
  <h4> Type Stability and Performance </h4>
 <p>The key to generating fast code lies in the information available to the compiler during the compilation stage. This information is primarily gathered through type inference, where Julia identifies the specific type of each variable and expression involved. When the compiler can <strong>accurately predict a single concrete type for the function's output</strong>, the function call is said to be <span style="color: rgb(62, 121, 180);"><strong>type stable</strong></span>. </p>
 <p>While this constitutes the <a href="https://docs.julialang.org/en/v1/manual/faq/#man-type-stability">formal definition of type stability</a>, a more stringent definition is usually applied in practice: the compiler must be able to <strong>infer unique concrete types for  <em>each</em> expression within the function</strong>, not only for the final output. This definition aligns with <code>@code_warntype</code>, the built-in macro to detect type instabilities. </p>
 <p>If the condition is satisfied, the compiler can specialize the computational approach for each operation, resulting in fast execution. Essentially, type stability dictates that there&#39;s sufficient information to determine a straight execution path, thus avoiding unnecessary type checks and dispatches at runtime.</p>
 <p>In contrast, type-unstable functions generate generic code that accommodates each possible combination of unique concrete types. This results in additional overhead during runtime, where Julia is forced to dynamically gather type information and perform extra calculations based on it. The consequence is a pronounced deterioration in performance.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Type Stability Characterizes Function  <em>Calls</em></strong>  </span>  </div>  <div class=content>     It&#39;s common to describe a function as &quot;type stable&quot;. Nevertheless, it&#39;s not the function itself that&#39;s type stable, but rather the function calls for specific concrete types of its arguments. The distinction is crucial in practice, since a function may exhibit type stability for certain input types but not others.  </div>  </div>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Type Stability Characterizes Function  <em>Calls</em></strong>  </span>  </div>  <div class=content>     It&#39;s common to describe a function as &quot;type stable&quot;. Strictly speaking, however, type stability isn&#39;t a property of the function. Rather, it’s a property of how the function behaves when called with arguments of particular concrete types. The distinction is crucial in practice, since a function may exhibit type stability for certain input types, but not for others.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2868,7 +2868,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>An Example</h2></p>
-<p>To see type stability in practice, let&#39;s consider the following example.</p>
+<p>To identify type stability in practice, let&#39;s consider the following example.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2888,7 +2888,7 @@ color: white;
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The two operations may seem equivalent, as they both ultimately compute <code>1 &#43; 2</code>. However, the methods used in each case differ, with the first approach being faster because the function call is type stable.</p>
+<p>The two operations may seem equivalent, as they both ultimately compute <code>1 &#43; 2</code>. However, the implementation strategy used in each case differ, with the first approach being faster because the function call is type stable.</p>
 <p>Specifically, the output <code>x&#91;1&#93; &#43; x&#91;2&#93;</code> in the first tab can be deduced to be <code>Int64</code>, thus satisfying the definition of type stability. This occurs because <code>x&#91;1&#93;</code> and <code>x&#91;2&#93;</code> can be identified as <code>Int64</code>, allowing the compiler to generate code specialized for this type. Note that the efficiency of the generated code isn&#39;t limited to the given operation: it applies to any call <code>sum&#40;y&#41;</code> such that <code>y</code> is a <code>Vector&#123;Float64&#125;</code>.</p>
 <p>In contrast, <strong>the second tab defines a type-unstable function call</strong>. Since <code>x</code> has type <code>Vector&#123;Any&#125;</code>, it becomes impossible to predict a unique concrete type for <code>x&#91;1&#93; &#43; x&#91;2&#93;</code> solely based on <code>x</code>&#39;s type. This is because <code>x&#91;1&#93;</code> and <code>x&#91;2&#93;</code> may embody any concrete type that is a subtype of <code>Any</code>. Consequently, the compiler is forced to create code with multiple conditional statements, with each branch handling how to compute <code>x&#91;1&#93; &#43; x&#91;2&#93;</code> for a possible type &#40;<code>Int64</code>, <code>Float64</code>, <code>Float32</code>, etc.&#41;. This results in slow compiled code, as it&#39;ll require extra work during runtime. Furthermore, the degraded performance will be incurred for every call <code>sum&#40;y&#41;</code> such that <code>y</code> has type <code>Vector&#123;Any&#125;</code>.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
@@ -2945,7 +2945,7 @@ end</code></pre>
 </li>
 <li><p>If at least one line is <span style="text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000; color:  rgb(168, 50, 50);"><strong>red</strong></span>, the function is <span style="text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000; color:  rgb(168, 50, 50);"><strong>type unstable</strong></span>. It reflects that one variable or more could potentially adopt multiple possible types. </p>
 </li>
-<li><p><span style="text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000; color:  rgb(195, 195, 78);"><strong>Yellow</strong></span> lines indicate type instabilities that the compiler can handle effectively, in the sense that they have a reduced impact on performance. As a rule of thumb, <span style="text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000; color:  rgb(195, 195, 78);"><strong>you can safely ignore them</strong></span>.</p>
+<li><p><span style="text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000; color:  rgb(195, 195, 78);"><strong>Yellow</strong></span> lines indicate type instabilities that the compiler can handle effectively &#40;in the sense that they have a reduced impact on performance&#41;. As a rule of thumb, <span style="text-shadow:-0.5px -0.5px 0 #000,0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000; color:  rgb(195, 195, 78);"><strong>you can safely ignore them</strong></span>.</p>
 </li>
 </ul></div>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
@@ -2997,9 +2997,9 @@ end</code></pre>
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">function foo&#40;x&#41;
-    y &#61; &#40;x &lt; 0&#41; ?  0  :  x    
+    y &#61; &#40;x &lt; 0&#41; ?  0  :  x
     
-    &#91;y * i for i in 1:100&#93;    
+    &#91;y * i for i in 1:100&#93;
 end</code></pre>
 <p></div></div> 
 <div class="img_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>  <div style="padding-bottom:0.5em;"><div class="julia_repl_NoFormat" style="padding-bottom:0.25em; padding-top:0.25em"><span style="padding-left:1em;"><div class="julia_line">julia&gt</div> <code>@code_warntype foo&#40;1.&#41;</code></span></div></div>  <div class="img_output">
@@ -3022,7 +3022,7 @@ end</code></pre>
 <p></div></div> 
 <div class="img_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>  <div style="padding-bottom:0.5em;"><div class="julia_repl_NoFormat" style="padding-bottom:0.25em; padding-top:0.25em"><span style="padding-left:1em;"><div class="julia_line">julia&gt</div> <code>@code_warntype foo&#40;1.&#41;</code></span></div></div>  <div class="img_output">
     <p> <span style="padding-left:1em;"> 
-          <img style="width:35%; height:auto; max-width:100%;" src="/julia_book/assets/PAGES/08b_TS-definition/pics/02b.png"/>
+          <img style="width:35%; height:auto; max-width:100%;" src="/julia_book/assets/PAGES/08b_TS-definition/pics/02c.png"/>
           </span>
     </p>
     </div> </div> 
@@ -3031,7 +3031,7 @@ end</code></pre>
 <p>The yellow warning reflects that <code>y * 2</code> could return either a <code>Float64</code> or <code>Int64</code> value. However, this operation is computed only once and based on two types that the compiler can handle efficiently. Instead, the second tab involves multiple computations <code>y * i</code> without knowledge of a unique concrete type for <code>y</code>, resulting in a red warning. </p>
 <p>Despite this, note that not all yellow warnings will necessarily escalate to a red warning when incorporated into a for-loop. The third tab illustrates this point, reinforcing that not all type instabilities are equally detrimental.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>For-Loops and Yellow Warnings</strong>  </span>  </div>  <div class=content>     A yellow warning will always be displayed when running a for-loop, even if the operation itself is type stable. In such cases, the warning can safely be disregarded, as it simply reflects the inherent behavior of iterators: they return either the next element to iterate over or <code>nothing</code> with type <code>Nothing</code> when the sequence is exhausted.</p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>For-Loops and Yellow Warnings</strong>  </span>  </div>  <div class=content>     When running for-loops, a yellow warning will always be displayed, even if the operation is type stable. The warning can safely be disregarded in such cases, as it simply reflects the inherent behavior of iterators: they return either the next element to iterate over or <code>nothing</code> &#40;a value with type <code>Nothing</code>&#41; when the sequence is exhausted.</p>
 <p> <div class=" code_box"> <details  open><summary> For-Loop  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">function foo&#40;&#41;
     for i in 1:100
