--- a/index.html
+++ b/index.html
@@ -2347,7 +2347,7 @@ color: white;
 </li>
 </ul>
 <ul>
-<li><p><span style="color: rgb(62, 121, 180);"><strong><span style="text-decoration: underline">A UNIFIED COMPUTATIONAL PLATFORM</span></strong></span>: No need to switch between multiple languages. In Julia, you can preprocess data, perform statistical analysis, generate graphical representations, and implement numerical models. Furthermore, Julia interoperates with other languages and tools, allowing you to leverage the strengths of Python, R, C. Its ecosystem includes mature packages for data analysis, plotting, and computational modeling.</p>
+<li><p><span style="color: rgb(62, 121, 180);"><strong><span style="text-decoration: underline">A UNIFIED COMPUTATIONAL PLATFORM</span></strong></span>: No need to switch between multiple languages. In Julia, you can preprocess data, perform statistical analysis, generate graphical representations, and implement numerical models. Furthermore, Julia interoperates with other languages and tools, allowing you to leverage the strengths of Python, R, or C&#43;&#43;. Its ecosystem includes mature packages for data analysis, plotting, and computational modeling.</p>
 </li>
 </ul>
  </div>
